--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,5 +5,8 @@ tasks:
   - init: | 
         composer update --lock
         composer install
+        mysql -e "CREATE USER 'wp'@'localhost' IDENTIFIED BY 'wp';";
+        mysql -e "GRANT ALL PRIVILEGES ON * . * TO 'wp'@'localhost';";
+        mysqladmin reload;
         chmod +x bin/*
         ./bin/run-wp-tests.sh
