--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "require": {
         "php": ">=7.1",
         "redux-framework/redux-framework": "4.3.9",
-        "phpunit/phpunit": "6.*.*"
+        "phpunit/phpunit": "9.0.*"
     },
     "require-dev": {
         "bocharsky-bw/arrayzy": "v0.1.1",
-        "mockery/mockery": "^0.9.9",
+        "mockery/mockery": "^1.3.0",
         "yoast/phpunit-polyfills": "1.x-dev"
     },
     "license": "GPL-2.0",
